# ent/openapi.json
@@ -77,6 +77,9 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "password": {
+                    "type": "string"
+                  },
                   "card": {
                     "type": "integer"
                   },
@@ -98,6 +101,7 @@
                   }
                 },
                 "required": [
+                  "password",
                   "owner"
                 ]
               }
@@ -412,6 +416,9 @@
                   "name": {
                     "type": "string"
                   },
+                  "password": {
+                    "type": "string"
+                  },
                   "users": {
                     "type": "array",
                     "items": {
@@ -420,7 +427,8 @@
                   }
                 },
                 "required": [
-                  "name"
+                  "name",
+                  "password"
                 ]
               }
             }
@@ -734,6 +742,9 @@
                   "username": {
                     "type": "string"
                   },
+                  "password": {
+                    "type": "string"
+                  },
                   "created_at": {
                     "type": "string",
                     "format": "date-time"
@@ -753,7 +764,8 @@
                   }
                 },
                 "required": [
-                  "username"
+                  "username",
+                  "password"
                 ]
               }
             }
@@ -1031,6 +1043,9 @@
           "id": {
             "type": "integer"
           },
+          "password": {
+            "type": "string"
+          },
           "card": {
             "type": "integer"
           },
@@ -1053,6 +1068,7 @@
         },
         "required": [
           "id",
+          "password",
           "owner"
         ]
       },
@@ -1199,6 +1215,9 @@
           "name": {
             "type": "string"
           },
+          "password": {
+            "type": "string"
+          },
           "users": {
             "type": "array",
             "items": {
@@ -1208,7 +1227,8 @@
         },
         "required": [
           "id",
-          "name"
+          "name",
+          "password"
         ]
       },
       "GroupCreate": {
@@ -1306,6 +1326,9 @@
           "username": {
             "type": "string"
           },
+          "password": {
+            "type": "string"
+          },
           "created_at": {
             "type": "string",
             "format": "date-time"
@@ -1326,7 +1349,8 @@
         },
         "required": [
           "id",
-          "username"
+          "username",
+          "password"
         ]
       },
       "UserCreate": {
